# dubna_internship_backend

./: .gitignore  .rustfmt.toml  Cargo.toml  config.toml  docker-compose.yml
migrations/00000000000000_initial/: down.sql  up.sql
migrations/00000000000001_test_data/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs
src/api/: mod.rs  ticket.rs  user.rs
src/db/: mod.rs  ticket.rs  user.rs
tests/: add_ticket.rs  auth.rs  edit_ticket.rs  get_ticket.rs  list_tickets.rs  user.rs
tests/common/: mod.rs
