[package]
name = "dubna-internship"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
derive_more = { version = "1.0.0-beta.6", features = ["display", "from"] }
enum-utils = "0.1"
futures = "0.3"
humantime-serde = "1.1"
itertools = "0.13"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive", "std"] }
time = "0.3"
tokio = { version = "1", features = ["fs", "macros", "net", "rt"] }
tokio-postgres = { version = "0.7", features = ["with-time-0_3", "with-uuid-1"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }
headers = "0.4.0"

[dev-dependencies]
constcat = "0.5"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"